fix: slinks node align to close to the node which is linked to it & slinks label color and all links label font-size increase

--- a/src/scss/filejet-scss/org-chart/_org-chart.scss
+++ b/src/scss/filejet-scss/org-chart/_org-chart.scss
@@ -894,6 +894,7 @@
     }
     [data-l-id] text {  
         fill: #000;
+        font-size: 15px !important;
     }
     
 }
